--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,379 @@
     margin:0px;
     padding:0px;
 }
+/* colors as variables to reference */
+:root {
+    /* --primary: rgba(68, 88, 119, 1); */
+    /* --secondary: rgba(146, 204, 206, 1); */
+    /* --tertiary: rgba(49, 52, 61, 1); */
+    /* --dark: rgba(28, 29, 33, 1); */
+    /* --light: rgba(238, 238, 247, 1); */
+    --primary: rgb(35, 50, 72);
+    --secondary: rgb(8, 107, 113);
+    --secondaryMed: rgba(33, 166, 171, 0.973);
+    --secondaryHi: rgb(129, 251, 255);
+    --tertiary: rgb(75, 0, 42);
+    --tertiaryMed: rgb(136, 4, 141);
+    --tertiaryHi: rgb(199, 13, 206);
+    --dark: rgba(28, 29, 33, 1);
+    --light: rgba(224, 234, 240, 0.9);
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: var(--primary);
+    background-color: var(--light);
+    line-height: 1.5;
+  }
+  
+  h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+  }
+  
+  p {
+    margin: 0;
+  }
+
+  /* top bar from name to links  */
+  header { 
+    padding: 15px 6% 15px 0; /* top| right | bottom | left  */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    /* background-color: var(--tertiary); */
+    background-color: var(--dark);
+    box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
+  }
+  
+  #p_f,#p_l{
+    margin-left: 4vw;
+  }
+  #a_l{
+    margin-right: 4vw;
+  }
+
+  #p_f:hover{
+    color:var(--secondaryHi);
+  } 
+  #h_f:hover{
+    color:var(--secondaryHi);
+  } 
+  #o_f:hover{
+    color:var(--secondaryHi);
+  } 
+  #p_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #h_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #i_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #m_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #v_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #o_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #n_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #g_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #s_l:hover{
+    color:var(--secondaryHi);
+  } 
+  #a_l:hover{
+    color:var(--secondaryHi);
+  } 
+
+  header h1{
+    color: var(--dark);
+    background-color: var(--secondaryMed);
+    transition: all 0.25s ease-in;
+    padding: 10px 0% 10px 0%;
+    margin: 0;
+    font-size: 4vw;
+    line-height: 1;
+  }
+
+  /* nav links */
+  nav {
+    margin-top: 10px;
+    margin-left: 0px;
+    margin-right:0px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  nav a {
+    text-decoration: none;
+    padding: 5px 10px;
+    color: var(--secondaryMed);
+    margin-right: 10px;
+    background-image: linear-gradient(180deg, var(--secondary) 0%, var(--secondaryHi) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.20s ease-in;
+    font-size: 1.4rem;
+  }
+  
+  nav a:hover {
+    background-size: 100% 100%;
+    color: var(--dark);
+  }
+  
+  nav a:last-child {
+    margin-right: 0;
+  }
+  
+  main {
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+  
+  .banner {
+    /* background: rgb(68, 88, 120); */
+    background-image: url("../pics/archGalaxy.png"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: soft-light;
+    min-height: 30vh;
+    color: var(--light);
+    padding: 2% 6%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+  }
+  
+  .banner div {
+    flex: 0 0 90%;
+  }
+  
+  .banner h2 {
+    /* background-color: var(--secondary); */
+    /* color: var(--tertiary); */
+    background-color: transparent;
+    color: transparent;
+    transition: all 0.33s ease-in;
+    margin: 0;
+    padding: 5px 10px;
+    font-size: 2.3rem;
+    line-height: 1.2;
+    display: inline;
+  }
+  .banner h2:hover {
+    color: var(--secondaryMed);
+  }
+  /* all of main content(about me - contact) auto 88% left & right */
+  .page-wrapper {  
+    max-width: 88%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .page-section {
+    margin: 25px 0;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-between;
+  }
+  
+  .page-section > h2 {
+    flex: 0 0 20%;
+    text-align: right;
+    padding-right: 15px;
+    border-right: 4px solid var(--primary);
+    font-size: 4vw;
+    line-height: 1.1;
+  }
+  
+  .page-section > div {
+    flex: 0 0 77%;
+  }
+  
+  .page-section p {
+    margin-bottom: 20px;
+  }
+  
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .flex-item {
+    border: 5px solid var(--secondary);
+    /* background-color: var(--primary); */
+    background-color: rgba(50,50,50,.60);
+    color: var(--tertiary);
+    min-height: 150px;
+    max-height: 150px;
+    flex-basis: calc(50% - 1em);
+    display: flex;
+    align-items: flex-end;
+    padding: 0 0 20px 0;
+    margin: 0.5em;
+    text-decoration: none;
+    background-blend-mode: soft-light;
+    background-size: 150%;
+    transition: all 0.5s;
+    font-size: 0.9rem;
+  }
+  
+  /* feature first portfolio item */
+  .flex-item:first-child {
+      min-height: 400px;
+      flex-basis: 100%;
+      background-size: cover;
+      background-position: center;
+
+  }
+  
+  .flex-item:hover {
+    background-color: rgba(0, 0, 0,.1);
+    border: 5px solid var(--secondaryHi);
+    color: var(--secondaryHi);
+  }
+
+  .flex-item div {
+    background-color: var(--secondary);
+    padding: 8px 10px;
+  }
+  
+  .flex-item h3 {
+    font-size: 1.6rem;
+  }
+  
+  .contact address {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .contact address a {
+    color: var(--tertiary);
+    padding: 5px;
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-style: normal;
+    background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondaryHi) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    margin: 0 0.2rem 0.1rem;
+    display: inline-block;
+  }
+  
+  .contact address a:hover {
+    background-size: 100% 88%;
+    color: var(--tertiaryHi);
+  }
+  
+  /* portfolio project images */
+  .run-buddy {
+    background-image: url("../pics/02-run-buddy.jpg");
+  }
+  
+  .led-wall {
+    background-image: url("../pics/02-portfolio-1.jpg");
+  }
+  
+  .react-calc {
+    background-image: url("../pics/02-portfolio-2.jpg");
+  }
+  
+  .pastel-puzzles {
+    background-image: url("../pics/balancedRock.png");
+  }
+  
+  .surf-report {
+    background-image: url("../pics/eleutheraPaddle1.png");
+  }
+  
+  /* end portfolio project images */
+  @media screen and (max-width: 1190px) {
+    header nav{
+        margin-left: 50px;
+    }
+
+  }
+  @media screen and (max-width: 980px) {
+    header {
+      padding: 0 0 10px 0;
+      justify-content: center;
+      text-align: center;
+    }
+  
+    header h1 {
+      width: 100%;
+      padding: 8px;
+      margin-top: 10px;
+      font-size: 7vw;
+    }
+  
+    header nav {
+      justify-content: center;
+    }
+  
+    .page-section > h2,
+    .page-section > div {
+      flex: 0 0 100%;
+    }
+  
+    .page-section > h2 {
+      border-right: none;
+      border-bottom: 4px solid var(--primary);
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+      text-align: left;
+      font-size: 7vw;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .flex-item,
+    .flex-item:first-child {
+      flex-basis: 100%;
+    }
+  
+    .flex-item:first-child {
+      min-height: 150px;
+    }
+  
+    .banner {
+      justify-content: center;
+      text-align: center;
+    }
+  
+    .contact address {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    header nav {
+        margin-left: 0px;
+        margin-right: 0px;
+        justify-content: center;
+      }
+
+
+  }
+  
