--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,10 @@
 }
 /* colors as variables to reference */
 :root {
-    /* --primary: rgba(68, 88, 119, 1); */
-    /* --secondary: rgba(146, 204, 206, 1); */
-    /* --tertiary: rgba(49, 52, 61, 1); */
-    /* --dark: rgba(28, 29, 33, 1); */
-    /* --light: rgba(238, 238, 247, 1); */
-    --primary: rgb(35, 50, 72);
+    --primary: rgba(32, 56, 91, 0.705);
     --secondary: rgb(8, 107, 113);
     --secondaryMed: rgba(33, 166, 171, 0.973);
-    --secondaryHi: rgb(129, 251, 255);
+    --secondaryHi: rgba(129, 251, 255, 0.749);
     --tertiary: rgb(75, 0, 42);
     --tertiaryMed: rgb(136, 4, 141);
     --tertiaryHi: rgb(199, 13, 206);
@@ -100,7 +95,7 @@
 
   header h1{
     color: var(--dark);
-    background-color: var(--secondaryMed);
+    background-image: linear-gradient(180deg, var(--secondary) 0%, var(--secondaryHi) 100%);
     transition: all 0.25s ease-in;
     padding: 10px 0% 10px 0%;
     margin: 0;
@@ -121,7 +116,8 @@
   nav a {
     text-decoration: none;
     padding: 5px 10px;
-    color: var(--secondaryMed);
+    /* color: var(--secondaryMed); */
+    color: var(--tertiaryHi);
     margin-right: 10px;
     background-image: linear-gradient(180deg, var(--secondary) 0%, var(--secondaryHi) 100%);
     background-repeat: no-repeat;
@@ -147,11 +143,12 @@
   
   .banner {
     /* background: rgb(68, 88, 120); */
-    background-image: url("../pics/archGalaxy.png"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
+    background-image: url("../pics/archGalaxy.png"), linear-gradient(180deg, var(--secondaryHi) 0%, var(--primary) 50%);
+    /* background-image: url("../pics/archGalaxy.png"); */
     background-size: cover;
     background-position: center;
     background-blend-mode: soft-light;
-    min-height: 30vh;
+    min-height: 35vh;
     color: var(--light);
     padding: 2% 6%;
     display: flex;
@@ -170,23 +167,26 @@
     background-color: transparent;
     color: transparent;
     transition: all 0.33s ease-in;
-    margin: 0;
+    margin-bottom: 20vmin;
     padding: 5px 10px;
     font-size: 2.3rem;
     line-height: 1.2;
     display: inline;
   }
   .banner h2:hover {
-    color: var(--secondaryMed);
+    /* color: var(--secondaryMed); */
+    color: var(--secondaryHi);
+    /* color: var(--tertiaryHi); */
   }
   /* all of main content(about me - contact) auto 88% left & right */
   .page-wrapper {  
-    max-width: 88%;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
   
   .page-section {
+    color: var(--tertiary);
     margin: 25px 0;
     padding: 10px 0;
     display: flex;
@@ -224,8 +224,8 @@
     /* background-color: var(--primary); */
     background-color: rgba(50,50,50,.60);
     color: var(--tertiary);
-    min-height: 150px;
-    max-height: 150px;
+    min-height: 300px;
+    max-height: 400px;
     flex-basis: calc(50% - 1em);
     display: flex;
     align-items: flex-end;
@@ -233,14 +233,16 @@
     margin: 0.5em;
     text-decoration: none;
     background-blend-mode: soft-light;
-    background-size: 150%;
+    /* background-size: 75%; */
+    background-size: cover;
+    background-position: center;
     transition: all 0.5s;
     font-size: 0.9rem;
   }
   
   /* feature first portfolio item */
   .flex-item:first-child {
-      min-height: 400px;
+      min-height: 450px;
       flex-basis: 100%;
       background-size: cover;
       background-position: center;
@@ -276,12 +278,13 @@
     text-decoration: none;
     font-size: 1.3rem;
     font-style: normal;
-    background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondaryHi) 100%);
+    background-image: linear-gradient(0deg, var(--secondary) 0%, var(--secondaryHi) 100%);
     background-repeat: no-repeat;
     background-size: 100% 0.2em;
     background-position: bottom;
     transition: all 0.25s ease-in;
     margin: 0 0.2rem 0.1rem;
+    /* margin: 0px; */
     display: inline-block;
   }
   
@@ -333,6 +336,7 @@
     }
   
     header nav {
+      margin-left: 0px;
       justify-content: center;
     }
   
@@ -347,7 +351,7 @@
       margin-bottom: 20px;
       padding-bottom: 10px;
       text-align: left;
-      font-size: 7vw;
+      font-size: 6vw;
     }
   }
   
